test/subAssign2.slq
// args: --run

def main(){
	x:=1;
	x sub=2; // error
	assert(x=0);
}
